--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ form {
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
   padding: 8px;
   overflow: auto;
 }
